--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
+
+
+
+
+
 {
-  "name": "assesment",
+   "name": "assesment",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+  "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
@@ -18,7 +29,6 @@
     "twilio": "^4.18.0",
     "wbm": "^1.1.16",
     "web-vitals": "^2.1.4"
-  },
- 
-  
+  }
 }
+
